--- a/www/style.css
+++ b/www/style.css
@@ -1,51 +1,144 @@
+html {
+	min-height: 100%;
+}
+
 body {
-	font: 1em sans-serif;
+	font: 1rem sans-serif;
 	color: #444444;
 	text-align: center;
-	padding: 50px 20px 20px;
+	padding: 3rem 2rem 10rem;
 	margin: 0;
-	background: #F8F8F8;
+	background: linear-gradient(to bottom, #DDEEFF, #F8F8F8);
 }
-.section {
-	display: inline-block;
-	margin: 2em 0 0;
-	width: 450px;
-	max-width: calc(100% - 40px);
-	padding: 1em;
-	border-radius: 3px;
-	box-shadow: 0 3px 20px rgba(0, 0, 0, 0.2);
-	background: #FFFFFF;
+
+h1 {
+	margin: 0 0 1rem;
+	font: bolder 2rem sans-serif;
+}
+
+.item {
+	--col: white;
+	display: block;
 	color: inherit;
 	text-decoration: none;
+	transition: 0.2s ease background-color, 0.2s ease transform;
+	background: var(--col);
+	max-width: 26rem;
+	margin: 0 auto 1rem;
+	padding: 1.5rem;
+	border-radius: 5px;
 }
-a .link {
-	font-size: 0.8em;
+.item:nth-child(1):hover { --col: #AACCFF; }
+.item:nth-child(2):hover { --col: #FFEEAA; }
+.item:nth-child(3):hover { --col: #BBEEAA; }
+.item:nth-child(4):hover { --col: #BBAAFF; }
+.item:nth-child(5):hover { --col: #FFAAAA; }
+.item:nth-child(6):hover { --col: #EEAAFF; }
+.item:nth-child(7):hover { --col: #AAEEFF; }
+.item:nth-child(9):hover { --col: #FFCCAA; }
+.item h2 {
+	font: bolder 1.5rem sans-serif;
+	margin: 0 0 1rem;
 }
-a:link .link, a:visited .link, a:link:not(.section), a:visited:not(.section) {
+.item .info {
+	margin: 0 0 1rem;
+}
+.item .link {
+	font-size: 0.8rem;
+	margin: 0;
+}
+.item:link .link, .item:visited .link {
 	color: #4466AA;
 	text-decoration: underline;
 }
-a:active .link, a:hover .link, a:active:not(.section), a:hover:not(.section) {
-	color: #6699BB;
-	text-decoration: none;
+.item:active .link, .item:hover .link {
+	color: #333333;
+	text-decoration: underline;
 }
-h1 {
-	margin: 0;
-	font: bolder 2em sans-serif;
+.skip {
+	height: 0;
 }
-h2 {
-	margin: 0;
-	font: bolder 1.5em sans-serif;
-}
-p {
-	margin: 1em 0 0;
+
+@media (min-width: 46rem) {
+	main {
+		display: grid;
+		justify-content: center;
+	}
+
+	.item {
+		--col: white;
+		position: relative;
+		margin: 0;
+		padding: 0;
+		width: var(--size);
+		height: calc(var(--size) * 1.732050807568877);
+		background: var(--col) padding-box;
+		border-width: var(--space) calc(var(--size) * 0.25 + var(--space) * 0.866025403784439);
+		border-style: solid;
+		border-color: transparent;
+		box-sizing: content-box;
+		border-radius: 0;
+	}
+	.item::before, .item::after {
+		content: "";
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		border-width: calc(var(--size) * 0.866025403784439) calc(var(--size) * 0.5);
+		border-style: solid;
+		border-color: transparent var(--col) transparent var(--col);
+		transition: 0.2s ease border-color;
+		pointer-events: none;
+		z-index: -1;
+	}
+	.item::before {
+		right: calc(100% - 0.5px);
+		border-left: none;
+	}
+	.item::after {
+		left: calc(100% - 0.5px);
+		border-right: none;
+	}
+
+	main {
+		--size: 9rem;
+		--space: 0.5rem;
+		margin-top: -3rem;
+		grid-template-columns: repeat(3, max-content);
+	}
+	.item:nth-child(3n + 2) {
+		top: calc(var(--size) * 0.866025403784439 + var(--space));
+	}
+	.item h2 {
+		margin: 2rem -0.8rem 1rem;
+		min-height: 3rem;
+	}
+	.item .info {
+		margin: 0 -2.5rem 0.5rem;
+		min-height: 4rem;
+	}
+	.item .link {
+		margin: 0 -2rem;
+	}
+	.item:active, .item:hover {
+		transform: scale(0.95);
+	}
 }
 
 .error header {
-	margin: 30px 0 40px;
+	margin: 2rem 0 3rem;
 }
 
 .error header p {
-	font-size: 0.6em;
+	font-size: 0.6rem;
 	color: #888888;
+}
+
+a:link:not(.item), a:visited:not(.item) {
+	color: #4466AA;
+	text-decoration: underline;
+}
+a:active:not(.item), a:hover:not(.item) {
+	color: #6699BB;
+	text-decoration: none;
 }
