--- a/www/style.css
+++ b/www/style.css
@@ -77,6 +77,7 @@ li {
 }
 .item .info {
 	margin: 0 0 1rem;
+	line-height: 1.4;
 }
 .item .link {
 	font-size: 0.8rem;
@@ -123,7 +124,10 @@ a.item:hover {
 	}
 	.item>section {
 		position: absolute;
-		padding: 0;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		padding: 2rem 0;
 		border-radius: 0;
 		top: 0;
 		left: var(--grow);
@@ -152,15 +156,16 @@ a.item:hover {
 	}
 
 	.item h2 {
-		margin: 2rem -0.8rem 1rem;
+		margin: 0 -0.8rem;
 		min-height: 3rem;
 	}
 	.item .info {
-		margin: 0 -2.5rem 0.5rem;
-		min-height: 4rem;
+		margin: 0 -2.5rem;
 	}
 	.item .link {
 		margin: 0 -2rem;
+		min-height: 3rem;
+		padding-top: 0.25rem;
 	}
 	.item:focus {
 		--grow: 4px;
